src/renderer/App.css
body {
    margin: 0;
}

#app {
    height: 100vh;
    width: 100vw;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    font-family: "Droid Sans Mono", "monospace", monospace;
}

#container {
    height: calc(100vh - 40px);
    width: min(calc(100vw - 40px), var(--editor-width));
}

/* A trick to display the scrollbar to the right instead of next to the text */
.visible.scrollbar.vertical,
.invisible.scrollbar.vertical {
    position: fixed !important;
    top: 40px !important;
}

.decorationsOverviewRuler {
    display: none !important;
}

.scroll-decoration {
    display: none;
}

.find-widget[aria-hidden='false'] {
    top: 10px !important;
    border-radius: 10px !important;
}

.monaco-inputbox {
    border-radius: 5px !important;
}

[data-quote='true'] {
    background-color: var(--quote-background);
    border-left: 5px solid var(--accent);
    margin-left: -10px;
    padding-left: 5px;
    background-color: rgba(0, 0, 0, 0.05);
    width: calc(100% - 10px) !important;
}
[data-quote-start='true'] {
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}
[data-quote-end='true'] {
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
}

.mtk23 {
    color: var(--mtk23) !important;
}

.mtk24 {
    color: var(--mtk24) !important;
}

.mtk25 {
    color: var(--mtk25) !important;
}

/* Monaco editor seems to clip content, which means that quote decorations
(which are set the the left of the text) are hidden unless all of the content is
moved to the right  */
.lines-content > * {
    left: 10px;
}
.inputarea.monaco-mouse-cursor-text {
    left: 60px !important;
}

/* Toastify styles */
:root {
    --toastify-color-light: #fff;
    --toastify-color-dark: #121212;

    --toastify-text-color-light: #757575;
    --toastify-text-color-dark: #fff;
}

